2008-12-17  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* gst-libs/gst/app/gstappsink.c:
	* gst-libs/gst/app/gstappsrc.c: (gst_app_src_class_init):
	Add appsrc and appsink documentation.

2008-12-17  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfdemux.c: (gst_mxf_demux_chain):
	In push mode skip the run in again if we get buffers with
	an offset before the run in. This can happen on seeks for example.

2008-12-16  Stefan Kost  <ensonic@users.sf.net>

	* ext/celt/gstceltenc.c:
	* ext/celt/gstceltenc.h:
	* ext/metadata/gstmetadatamux.c:
	* gst/qtmux/gstqtmux.c:
	* gst/qtmux/gstqtmux.h:
	  Totally remove the internal taglists and fully use tagsetter. Fixes
	  various tag muxing issues.

2008-12-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* tests/check/elements/mxfdemux.c: (mxfdemux_suite):
	Increase the timeout to 3 minutes to prevent timeouts.

2008-12-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* tests/check/elements/mxfdemux.c: (_sink_event):
	* tests/check/elements/mxfdemux.h:
	Make sure the main loop is already running when handling the EOS
	event in pull mode. This works around a race condition that can
	happen if the element goes into PLAYING, handles everything and
	sends EOS before the main loop is started.

2008-12-16  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfaes-bwf.c: (mxf_is_aes_bwf_essence_track),
	(mxf_bwf_handle_essence_element),
	(mxf_aes3_handle_essence_element), (mxf_bwf_create_caps),
	(mxf_aes3_create_caps), (mxf_aes_bwf_create_caps),
	(mxf_aes_bwf_init):
	* gst/mxf/mxfaes-bwf.h:
	* gst/mxf/mxfalaw.c: (mxf_is_alaw_essence_track),
	(mxf_alaw_handle_essence_element), (mxf_alaw_create_caps),
	(mxf_alaw_init):
	* gst/mxf/mxfalaw.h:
	* gst/mxf/mxfd10.c: (mxf_is_d10_essence_track),
	(mxf_d10_picture_handle_essence_element),