@@ -31,6 +31,7 @@
 #include "mxfjpeg2000.h"
 #include "mxfd10.h"
 #include "mxfup.h"
+#include "mxfvc3.h"
 
 GST_DEBUG_CATEGORY (mxf_debug);
 #define GST_CAT_DEFAULT mxf_debug
@@ -46,6 +47,7 @@ plugin_init (GstPlugin * plugin)
   mxf_jpeg2000_init ();
   mxf_d10_init ();
   mxf_up_init ();
+  mxf_vc3_init ();
 
   if (!gst_element_register (plugin, "mxfdemux", GST_RANK_PRIMARY,
           GST_TYPE_MXF_DEMUX))
