@@ -1,0 +1,33 @@
+/* GStreamer
+ * Copyright (C) 2008 Sebastian Dröge <sebastian.droege@collabora.co.uk>
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Library General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Library General Public License for more details.
+ *
+ * You should have received a copy of the GNU Library General Public
+ * License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+/* Implementation of SMPTE S2019-4 - Mapping VC-3 coding units into the MXF
+ * Generic Container
+ */
+
+#ifndef __MXF_VC3_H__
+#define __MXF_VC3_H__
+
+#include <gst/gst.h>
+
+#include "mxfparse.h"
+
+void mxf_vc3_init (void);
+
+#endif /* __MXF_VC3_H__ */
